# RagEvalTunning

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml
inputs/: 1706.03762v7.json
outputs/reports/: gpt-4.1-nano_text-embedding-3-small.md  gpt-4o-mini_text-embedding-3-small.md  gpt-5.4-nano_text-embedding-3-small.md
ragbench/: cli.py  config.py  index_registry.py  ingestion.py  judge.py  llm.py  models.py  questions.py  registry.py  results.py  runner.py  tuning.py  vectorstore.py
ragbench/systems/: base.py  graph_rag.py  hybrid_rag.py  hybrid_rag_reranker.py  llm_wiki.py  simple_rag.py  simple_rag_reranker.py
scripts/: neo4j.sh
